Kapitel 2.4 (Vollständigkeit der PL) soweit aufbereitet, dass er jetzt einigermaßen vollständig ist. Auch zwei Bilder eingefügt. Begriff "geschlossene Formel" und "Abschluss einer Formel" eingefügt (fehlte verblüffemderweise). Die Doppelpunkte hinter Quantoren wieder entfernt (also \forall x_i ~ \alpha  statt  \forall x_i \colon \alpha).   (sieht besser aus, und wir sparen ein Zeichen in der Sprache ;-)
git-svn-id: https://svn.lug-jena.de/uni-skripte@414 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -286,6 +286,8 @@
 \DeclareGraphicsRule{.8}{mps}{*}{}
 \DeclareGraphicsRule{.9}{mps}{*}{}
 \DeclareGraphicsRule{.10}{mps}{*}{}
+\DeclareGraphicsRule{.11}{mps}{*}{}
+\DeclareGraphicsRule{.12}{mps}{*}{}
 \else
 \DeclareGraphicsRule{.1}{eps}{*}{}
 \DeclareGraphicsRule{.2}{eps}{*}{}
@@ -297,6 +299,8 @@
 \DeclareGraphicsRule{.8}{eps}{*}{}
 \DeclareGraphicsRule{.9}{eps}{*}{}
 \DeclareGraphicsRule{.10}{eps}{*}{}
+\DeclareGraphicsRule{.11}{eps}{*}{}
+\DeclareGraphicsRule{.12}{eps}{*}{}
 \fi
 
 \SVN $LastChangedRevision$
@@ -2535,7 +2539,7 @@ Die \glqq Sprache\grqq{} der Theorien 1.\,Ordnung:
 \end{bsp}
 
 In $(\forall x_{i} ~ \alpha)$ ist $\alpha$ der \emph{Gültigkeitsbereich}
-des Quantors \glqq$\forall ~ x_{i}$\grqq. Eine Variable $y$, die im
+des Quantors \glqq$\forall x_{i}$\grqq. Eine Variable $y$, die im
 Gültigkeitsbereich eines Quantors $\forall y$ liegt oder die Teil des
 Quantors sind, heißt \emph[index=Variable!gebundene]{gebunden}. Falls
 eine Variable nicht gebunden ist, dann heißt sie
@@ -2544,7 +2548,7 @@ eine Variable nicht gebunden ist, dann heißt sie
 \begin{bsp}
   In der Formel $A_{1}^{2}(x_{1},x_{2})$ sind $x_{1}$ und $x_{2}$ freie
   Variablen. In der Formel $A_{1}^{2}(x_{1},x_{2}) \rightarrow (\forall
-  x_{2} A_{1}^{1}(x_{2}))$ ist die Variable $x_{1}$ frei und $x_{2}$ ist
+  x_{2}~ A_{1}^{1}(x_{2}))$ ist die Variable $x_{1}$ frei und $x_{2}$ ist
   im ersten Teil frei, im zweiten Teil aber durch den Allquantor
   gebunden.
 
@@ -2553,7 +2557,36 @@ eine Variable nicht gebunden ist, dann heißt sie
 \end{bsp}
 
 Eine Variable ist \emph[index=Variable!freie]{frei} in $\alpha$, falls
-alle Vorkommen der Variablen in $\alpha$ fri sind. (analog: gebunden)
+alle Vorkommen der Variablen in $\alpha$ frei sind. (analog: gebunden)
+\begin{bsp}
+In der Formel 
+$(\forall x_1 ~ ( \forall x_2 ~ A^2_1(x_1,x_2)) \rightarrow  A^3_1(x_1,x_2,x_3))$
+sind alle Vorkommen von $x_1$ gebunden
+und alle Vorkommen von $x_3$ frei.
+Also ist $x_1$ in dieser Formel gebunden, und $x_3$ ist frei.
+Das Variablensymbol $x_2$ kommt einmal gebunden und einmal frei vor.
+Also ist $x_2$ in dieser Formel weder frei noch gebunden.
+\end{bsp}
+
+Eine Formel heißt \emph[index=Formel!geschlossene]{geschlossen},
+falls alle Variablen in der Formel gebunden sind.
+(D.\,h. es gibt kein freies Vorkommen einer Variablen.)
+
+Der \emph[index=Formel!Abschluss einer]{Abschluss}
+einer Formel $\alpha$ entsteht aus $\alpha$,
+indem für jede frei in $\alpha$ vorkommende Variable 
+ein Allquantor an den Anfang der Formel geschrieben wird.
+
+\begin{bsp}
+In der Formel
+$(\forall x_1 ~ ( \forall x_2 ~ A^2_1(x_1,x_2)) \rightarrow  A^3_1(x_1,x_2,x_3))$
+kommen $x_2$ und $x_3$ frei vor.
+Also ist 
+$(\forall x_2 ~ (\forall x_3 ~
+        (\forall x_1 ~ ( \forall x_2 ~ A^2_1(x_1,x_2)) \rightarrow  A^3_1(x_1,x_2,x_3))))$
+der Abschluss der Formel.
+\end{bsp}
+
 
 $\alpha[x/t]$ entsteht aus $\alpha$ durch Ersetzen aller freien Vorkommen
 der Variablen $x$ durch den Term $t$.
@@ -2649,7 +2682,7 @@ $s$ erfüllt die Formel $\alpha$, falls
 % 2006-05-24
 
 \begin{bsp}
-  $\exists z\colon x\cdot z=y$ und $\exists x_{2}\colon
+  $\exists z ~ x\cdot z=y$ und $\exists x_{2} ~
   A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}), x_{3})$
 
   Interpretation $\mathcal{M}$:\\
@@ -2663,10 +2696,10 @@ $s$ erfüllt die Formel $\alpha$, falls
     \hline
     $s_{1}(x_{i})$ & 1 & 2 & 3 & 8 & 9 & \ldots
   \end{tabular}
-  $s_{1}$ erfüllt $(\exists x_{2}\colon A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}),
+  $s_{1}$ erfüllt $(\exists x_{2} ~ A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}),
   x_{3}) )$ $\Leftrightarrow$ $s_{1}$ erfüllt $\neg(\forall x_{2} \neg
   A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}),x_{3}))$ $\Leftrightarrow$ $s_{1}$
-  erfüllt nicht $(\forall x_{2}\colon A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}),
+  erfüllt nicht $(\forall x_{2} ~A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}),
   x_{3}))$ $\Leftrightarrow$ nicht jedes $s$ mit $s(x_{i}) =
   s_{1}(x_{i})$ für alle $i\ne2$ erfüllt $\neg
   A_{1}^{2}(f_{1}^{2}(x_{1},x_{2}), x_{3})$ $\Leftrightarrow$ nicht jedes
@@ -2737,6 +2770,9 @@ in Bezug auf die Begriffe wahr und falsch:
   und $s'$ erfüllt $\beta$
 
  \item[(E6)] $\Mmodels \alpha$ ~~gdw.~~ $\Mmodels (\forall x_i ~ \alpha)$.
+
+             (Für den Abschluss $\beta$ von $\alpha$ gilt also:
+                     $\Mmodels \beta$ ~gdw.~ $\Mmodels \alpha$.)
 
  \item[(E7)] Jede Instanz einer Tautologie ist wahr unter jeder Interpretation.
 
@@ -3248,20 +3284,29 @@ Die Verwendung der Regel C unterliegt den folgenden Einschränkungen.
 Wir wollen zeigen, dass in jedem Prädikatenkalkül 1.\,Ordnung
 alle gültigen Formeln beweisbar sind
 (d.\,h. aus $\models \alpha$ folgt $\vdash\alpha$).
+Diese Eigenschaft des Prädikatenkalküls nennt man \textit{Vollständigkeit}.
 Wir zeigen äquivalent,
 dass jede nicht-beweisbare Formel auch nicht gültig ist.
 Dazu müssen wir für jede nicht-beweisbare Formel $\alpha$
 eine Interpretation finden, unter der $\alpha$ falsch ist.
 Die Konstruktion dieser Interpretation basiert auf einer
 Erweiterung des Prädikatenkalküls durch zusätzliche Axiome.
-Für jede geschlossene Formel $\alpha$ ist in der Erweiterung
+Im ersten Schritt werden Axiome hinzugenommen, so dass
+für jede geschlossene Formel $\alpha$ 
 entweder $\alpha$ oder $\neg \alpha$ beweisbar.
+Eine Theorie mit dieser Eigenschaft heißt \textit{abgeschlossen}.
 Da die zusätzlichen Axiome nicht notwendigerweise gültig sind,
 sind nicht alle Modelle des Prädikatenkalküls auch Modelle
 dieser Erweiterung. Wichtig ist jedoch nur, dass am Ende
 (mindestens) ein Modell übrig bleibt.
-Die zusätzlichen Axiome sind letztlich so gewählt, dass
-man ein Modell für die Erweiterung angeben kann.
+Im zweiten Schritt werden Axiome hinzugenommen,
+die die einfache Konstruktion eines Modells für die Theorie ermöglichen.
+Diese Axiome machen die Theorie \textit{T-produktiv}.
+Die Vollständigkeit jedes Prädikatenkalküls 1.\,Ordnung
+basiert also darauf, dass man ihn zu einer abgeschlossenen
+und T-produktiven Theorie erweitern kann, die ein Modell besitzt
+(\autoref{lemma-abz-modelle}).
+
 
 Die Auswahl der zusätzlichen Axiome basiert darauf,
 dass man die Menge aller Formeln abzählen kann.
@@ -3283,7 +3328,8 @@ dass man die Menge aller Formeln abzählen kann.
     f(m) = \begin{cases}2m-1 & m > 0\\ 2m & m\leq 0\end{cases}
   \end{gather*}
 
-  Die Menge $\N\times\N$ ist abzählbar.
+  Die Menge $\N\times\N$ ist abzählbar mittesl der folgenden bijektiven Funktion
+  $bp\colon \N\times\N \rightarrow \N$.
   \begin{gather*}
     bp(a,b) = \Big(\sum_{d=0}^{a+b} d\Big)+b
   \end{gather*}
@@ -3326,12 +3372,17 @@ dass man die Menge aller Formeln abzählen kann.
     Die Funktion $g\colon \text{Menge aller
     Symbole}\rightarrow\N$ ist wie folgt definiert:
 
-    \begin{tabular}{r*{10}{|c}}
-      $u$ & $($ & $)$ & $,$ & $\neg$ & $\rightarrow$ & $\forall$ & $x_{i}$
-         & $a_{i}$ & $f_{i}^{j}$ & $A_{i}^{j}$\\ \hline
-      $g(u)$ & 1 & 2 & 3 & 4 & 5 & 6 & $3+4i$ & $4+4i$ & $9+4 bp(j-1,i-1)$
-         & $10+ 4bp(j-1,i-1)$
+    \begin{tabular}{r|*{6}{|c}|}
+      $u$ & $($ & $)$ & $,$ & $\neg$ & $\rightarrow$ & $\forall$ \\ \hline
+      $g(u)$ & 1 & 2 & 3 & 4 & 5 & 6 
     \end{tabular}
+
+    \begin{tabular}{r|*{4}{|c}|}
+      $u$ & $x_{i}$ & $a_{i}$ & $f_{i}^{j}$ & $A_{i}^{j}$\\ \hline
+      $g(u)$ & $3+4i$ & $4+4i$ & $9+4\cdot bp(j-1,i-1)$
+         & $10+ 4\cdot bp(j-1,i-1)$
+    \end{tabular}
+ 
     Die Funktion $g$ ist injektiv (man kann aus einer Zahl $g(u)$ eindeutig
     das Symbol $u$ bestimmen), aber nicht surjektiv (ist auch nicht nötig).
     Folgende Tabbelle zeigt die Kodierung einiger Symbole.
@@ -3389,7 +3440,7 @@ Jede Menge von Formeln oder Termen einer Theorie 1.\,Ordnung kann ebenfalls
 geordnet aufgezählt werden.
 Von den folgenden Mengen werden wir diese Eigenschaft noch nutzen.
 \begin{itemize}
- \item die Menge aller abgeschlossenen Formeln
+ \item die Menge aller geschlossenen Formeln
  \item die Menge aller variablenfreien Terme
  \item die Menge aller T-produktiven Formeln
 \end{itemize}
@@ -3403,28 +3454,31 @@ Eine Theorie, in der sowohl eine Formel $\alpha$
 als auch ihre Negation $\neg \alpha$ bewiesen werden kann,
 ist insofern sinnlos, da in dieser Theorie alle Formeln Theoreme sind
 (siehe \autoref{bemerk-nichtkonsistenz}).
-Die \glqq nicht-sinnlosen\grqq\xspace Theorien heißen konsistent
+Die \glqq nicht-sinnlosen\grqq\xspace Theorien heißen \textit{konsistent}
 (siehe \autoref{defini-konsistent}).
 In diesem Abschnitt geht es darum,
 wie man eine konsistente Theorie erweitern kann (durch zusätzliche Axiome),
-so dass sie konsistent bleibt.
-Die zusätzlichen Axiome sollen abgeschlossene Formeln sein.
-Jede abgeschlossene Formel
-ist unter einer Interpretation entweder wahr oder falsch.
-(Nicht-abgeschlossene Formeln können weder wahr noch falsch sein.)
-Lindenbaums Lemma (Lemma \autoref{lemma-lindenbaum})
-besagt, dass jede konsistente Theorie so erweitert werden kann,
-dass für jede abgeschlossene $\alpha$ entweder $\alpha$
-oder $\neg \alpha$ in der Erweiterung beweisbar ist
-und die Erweiterung ebenfalls konsistent ist.
+so dass sie konsistent bleibt und die zusätzliche Eigenschaft
+der Abgeschlossenheit erhält
+(Lindenbaums Lemma (\autoref{lemma-lindenbaum})).
+Eine Theorie heißt abgeschlossen (siehe \autoref{defini-abgeschlossene-Theorie}),
+falls für jede geschlossene Formel $\alpha$ entweder $\alpha$
+oder $\neg \alpha$ beweisbar ist.
+In einer konsistenten und abgeschlossenen Theorie
+ist die Menge der Theoreme maximal:
+nimmt man zu ihr eine nicht-beweisbare Formel als Axiom hinzu,
+dann wird die Theorie nicht-konsistent.
+(Siehe \autoref{figure-abgeschlossene-Erweiterung}.)
 
 
-\begin{figure}
-  \todo{Bild von Menge aller Formeln, die geteilt wird in \glqq die von $K$ beweisbare
-  Formeln\grqq\xspace und \glqq nicht in $K$ beweisbare Formeln\grqq. In erster ist
-  $\alpha$ und $\neg\beta$, in zweiter $\neg\alpha$ und $\beta$. Menge
-  erweitern um $\gamma$ zu $K'$, wobei $\neg\gamma$ in der Menge der nicht
-  beweisbaren Formeln}
+\begin{figure}[t]
+  \centering
+  \includegraphics{resolution.11}
+  \caption{Die Theoreme eines Prädikatenkalküls (dunkel gefärbter Bereich),
+  die Theoreme einer konsistenten und abgeschlossenen Erweiterung davon
+  (dunkel und weniger dunkel gefärbte Bereiche) und
+  die in der abgeschlossenen Erweiterung unbeweisbaren Formeln (weißer Hintergrund)}
+  \label{figure-abgeschlossene-Erweiterung}
 \end{figure}
 
 \begin{defini}[konsistente Theorie]\label{defini-konsistent}
@@ -3530,7 +3584,7 @@ ein Axiom sein.
 Falls eine der beiden Formeln beweisbar ist, muss man
 natürlich die beweisbare Formel auswählen.
 
-\begin{defini}[abgeschlossene Theorie]
+\begin{defini}[abgeschlossene Theorie]\label{defini-abgeschlossene-Theorie}
   Eine Theorie $K$ heißt \emph{abgeschlossen},
   falls für jede geschlossene Formel $\alpha$ (von $K$)
   gilt: $\xvdash[K]{} \alpha$ oder $\xvdash[K]{} \neg \alpha$.
@@ -3592,14 +3646,6 @@ und jede konsistente Theorie lässt sich dazu erweitern.
 
 % 2006-06-14
 
-\begin{figure}
-  \todo{Bildchen: links: abgeschlossene Theorie mit beweisbaren und nicht
-  beweisbaren Formeln, $\alpha, \neg\beta, \neg\gamma$ vs. $\neg\alpha,
-  \beta,\gamma$ }
-  \todo{Bildchen: rechts: Prädikatenkalkül 1.\,Ordnung mit beweisbaren und nicht
-  beweisbaren Formeln, $\alpha$ vs. $\neg\alpha, \beta,\neg\beta$}
-\end{figure}
-
 \subsection{Modelle für konsistente Theorien}
 
 In einer konsistenten und abgeschlossenen Theorie können
@@ -3613,7 +3659,27 @@ alle beweisbaren Formeln wahr sind.}
 besitzen.
 Um möglichst einfach ein Modell konstruieren zu können,
 erweitern wir die Theorie um zusätzliche Axiome,
-die zusätzliche Konstantensymbole enthalten.
+die zusätzliche Konstantensymbole enthalten,
+und halten die Theorie konsistent
+(siehe \autoref{figure-Tproduktive-Erweiterung}).
+Die zusätzlichen Konstantensymbole spielen die entscheidende Rolle
+bei der Konstruktion eines Modells.
+In \autoref{lemma-abz-modelle} wird gezeigt,
+dass jede konsistente und abgeschlossene Theorie ein Modell besitzt.
+Interessant ist auch, dass dieses Modell eine
+abzählbare Grundmenge hat (Satz von Löwenheim und Skolem, \autoref{satz-löwe-skolem}).
+
+\begin{figure}[t]
+  \centering
+  \includegraphics{resolution.12}
+  \caption{Die Formeln eines Prädikatenkalküls (innerhalb des Ovals)
+  und die Formeln einer Erweiterung davon durch Einführung neuer Konstantensymbole (Rechteck).
+  Da die Erweiterung abgeschlossen ist, sind alle Formeln im eingefärbten Bereich Theoreme
+  der Erweiterung.
+  Die Theoreme des ursprünglichen Prädikatenkalküls sind im dunkel
+  eingefaärbten Bereich.}
+  \label{figure-Tproduktive-Erweiterung}
+\end{figure}
 
 
 \begin{defini}[T-produktive Theorie]
@@ -3621,7 +3687,7 @@ die zusätzliche Konstantensymbole enthalten.
   falls für jede Formel $\alpha$ mit genau einer freien Variablen $x$ ein
   variablenfreier Term $t$ existiert mit
   \begin{gather*}
-    \xvdash[K]{} (\exists x\colon \neg\alpha) \rightarrow \neg\alpha[x/t]
+    \xvdash[K]{} (\exists x ~ \neg\alpha) \rightarrow \neg\alpha[x/t]
   \end{gather*}
 \end{defini}
 
@@ -3639,7 +3705,7 @@ die zusätzliche Konstantensymbole enthalten.
     $b_{i}$ weder in $\alpha_{1},\ldots,\alpha_{i-1}$ nicht in
     $b_{1},\ldots,b_{i-1}$ vorkommt.
 
-    Definiere $\sigma_{k}=(\exists x_{j_{k}}\colon \neg\alpha)
+    Definiere $\sigma_{k}=(\exists x_{j_{k}} ~ \neg\alpha)
     \rightarrow\neg\alpha[x_{j_{k}}/b_{k}]$. $K'$ hat zusätzliche Axiome
     $\sigma_{1},\sigma_{2},\ldots$.
 
@@ -3667,13 +3733,13 @@ die zusätzliche Konstantensymbole enthalten.
       Tautologie $(\sigma_{n}\rightarrow\neg\sigma_{n})\rightarrow
       \neg\sigma_{n}$ folgt $\xvdash[K_{n-1}]{}\neg\sigma_{n}$, d.\,h.
       \begin{gather*}
-        \xvdash[K_{n-1}]{}\neg(\exists x_{j_{n}}\colon \neg\alpha)
+        \xvdash[K_{n-1}]{}\neg(\exists x_{j_{n}} ~ \neg\alpha)
            \rightarrow \neg\alpha[x_{j_{n}}/b_{n}]
       \end{gather*}
 
       Mit der Implikationsregel folgt
       \begin{gather*}
-        \xvdash[K_{n-1}]{} (\exists x_{j_{n}}\colon
+        \xvdash[K_{n-1}]{} (\exists x_{j_{n}} ~
            \neg\alpha)\quad\text{und}\quad
            \xvdash[K_{n-1}]{} \neg\neg\alpha[x_{j_{n}}/b_{n}] ,
       \end{gather*}
@@ -3686,14 +3752,14 @@ die zusätzliche Konstantensymbole enthalten.
       $\xvdash[K_{n-1}]{}\alpha[x_{j_{n}}/x']$.
 
       Nach der Aufgabe 3 auf \hyperref[sec:uebung8]{Blatt~\ref{sec:uebung8}} gilt
-      $\xvdash[K_{n-1}]{}(\forall x_{j_{n}}\colon\alpha) \leftrightarrow
-      (\forall x'\colon \alpha[x_{j_{n}}/x']$). Aus $\xvdash[K_{n-1}]{}
+      $\xvdash[K_{n-1}]{}(\forall x_{j_{n}} ~ \alpha) \leftrightarrow
+      (\forall x' ~ \alpha[x_{j_{n}}/x']$). Aus $\xvdash[K_{n-1}]{}
       \alpha[x_{j_{n}}/x']$ folgt mit Generalisierung $\xvdash[K_{n-1}]{}
-      (\forall x'\colon \alpha[x_{j_{n}}/x'])$.
+      (\forall x' ~ \alpha[x_{j_{n}}/x'])$.
 
-      Mit Äquivalenzregel folgt $\xvdash[K_{n-1}]{}(\forall x_{j_{n}}\colon
-      \alpha)$. Aus $\xvdash[K_{n-1}]{} (\exists x_{j_{n}}\colon
-      \neg\alpha)$ folgt $\xvdash[K_{n-1}]{} \neg(\forall x_{j_{n}}\colon
+      Mit Äquivalenzregel folgt $\xvdash[K_{n-1}]{}(\forall x_{j_{n}} ~
+      \alpha)$. Aus $\xvdash[K_{n-1}]{} (\exists x_{j_{n}} ~
+      \neg\alpha)$ folgt $\xvdash[K_{n-1}]{} \neg(\forall x_{j_{n}} ~
       \alpha)$. Also ist $K_{n-1}$ nicht konsistent.
     \end{itemize}
   \end{proof}
@@ -3901,9 +3967,11 @@ auch tatsächlich bewiesen werden können.
   $\models\alpha$ folgt $\xvdash[K]{}\alpha$.
 
   \begin{proof}
-    Sei $\alpha$ eine Formel, die nicht in $K$ beweisbar ist
-    ($\not\xvdash[K]{}\alpha$). (O.\,B.\,d.\,A. ist $\alpha$ geschlossen.)
-
+    Sei $\beta$ eine Formel, die nicht in $K$ beweisbar ist
+    ($\not\xvdash[K]{}\beta$).
+    $\beta$ ist beweisbar in $K$ genau dann, wenn der Abschluss von $\beta$
+     in $K$ beweisbar ist.
+    Sei $\alpha$ der Abschluss von $\beta$.
     Erweitere $K$ zu $K'$ durch Hinzunehmen von $\neg\alpha$ als
     zusätzliches Axiom. Da $K$ konsistent ist (\autoref{lemma-KonsistenzPK}),
     ist $K'$ ebenfalls konsistent (\autoref{lemma-kons-erweiterung}).
@@ -3912,26 +3980,57 @@ auch tatsächlich bewiesen werden können.
     $K_{T}'$ kann zu einer abgeschlossenen Theorie $K^{\ast}$ erweitert werden, die
     konsistent und T-produktiv ist (\autoref{lemma-lindenbaum}).
     $K^{\ast}$ hat ein Modell $\mathcal{M}$ (\autoref{lemma-abz-modelle}).
-    Da alle Axiome von $K$ ebenfalls in $K^{\ast}$
-    enhalten sind, ist $\mathcal{M}$ auch ein Modell von $K$ und $K'$.
 
+    Da alle Axiome von $K'$ ebenfalls in $K^{\ast}$
+    enhalten sind, ist $\mathcal{M}$ auch ein Modell von $K'$.
     $\neg\alpha$ ist ein Axiom von $K'$. Also gilt $\Mmodels\neg\alpha$.
-    Also ist $\not\Mmodels\alpha$. Folglich gibt es eine Interpretation,
-    die kein Modell von $\alpha$ ist, d.\,h. $\alpha$ ist nicht gültig,
-    also $\not\models\alpha$.
+    Daraus folgt $\not\Mmodels\alpha$, und gemäß (E6) $\not\Mmodels\beta$.
+    Folglich gibt es eine Interpretation,
+    die kein Modell von $\beta$ ist, d.\,h. $\beta$ ist nicht gültig,
+    also $\not\models\beta$.
 
-    Damit haben wir gezeigt: aus $\not\xvdash[K]{}\alpha$ folgt $\not\models\alpha$.
+    Damit haben wir gezeigt: aus $\not\xvdash[K]{}\beta$ folgt $\not\models\beta$.
   \end{proof}
 \end{satz}
 
 Zum Abschluss dieses Kapitels fassen wir 
 \autoref{satz-vollstPK} und \autoref{satz-korrektheit-theorien-1.ordnung} zusammen.
 
-\begin{satz}
+\begin{satz}[Korrektheit und Vollständigkeit des Prädikatenkalküls 1.\,Ordnung]
 Sei $K$ ein Prädikatenkalkül 1.\,Ordnung. 
 Dann gilt für jede Formel $\alpha$ von $K$:
+
+{\centering
+
 $\alpha$ ist gültig genau dann, wenn $\alpha$ in $K$ beweisbar ist.
+
+}
 \end{satz}
+
+Diese Korrektheit und Vollständigkeit ist genau das, was man
+als \glqq natürlich\grqq\xspace annimmt.
+Man formuliert ja gerade Axiome und Schlussregeln, damit
+man Beweise führen kann.
+Und man will natürlich alles beweisen können, was wahr ist.
+Im nächsten Kapitel werden wir sehen,
+dass Vollständigkeit nur in recht \glqq kleinen\grqq\xspace Theorien
+garantiert werden kann.
+Wir werden eine Erweiterung des Prädikatenkalküls betrachten,
+in der man mit natürlichen Zahlen rechnen kann.
+Also so etwas wie elementare Zahlentheorie.
+Von dieser Theorie kann man zeigen,
+dass sie nicht vollständig ist
+(Unvollständigkeitssatz von Gödel, \todo{Referenz}).
+Das liegt letztlich daran, dass man in der von der Theorie zur Verfügung gestellten
+Sprache Aussagen über die Theorie machen kann.
+Jede Erweiterung der elementaren Zahlentheorie
+ist ebenfalls nicht vollständig (solange entscheidbar bleibt,
+was die Axiome der Theorie sind\footnote{\glqq entscheidbar\grqq\xspace
+heißt hier im intuitiven Sinne, dass man von jeder Formel nach endlicher 
+Zeit zum Überlegen sagen kann, ob sie ein Axiom ist oder nicht}).
+Die Welt, in der wir leben, besitzt also keine entscheidbare
+Menge von Axiomen, aus der alle Wahrheiten abgeleitet werden können.
+
 
 
 % 2006-06-21
@@ -4144,23 +4243,23 @@ sowie der Addition (Kommutativität, Assoziativität).
       \end{gather*}
       Darauf wenden wir noch einmal die Generalisierung an und bekommen
       \begin{gather*}
-        \forall x_{3}\colon x_{1}=x_{2} \rightarrow (x_{1}=x_{2}
+        \forall x_{3} ~ x_{1}=x_{2} \rightarrow (x_{1}=x_{2}
            \rightarrow x_{1}+x_{3} = x_{2}+x_{3} \rightarrow x_{1}+x_{3}' =
            x_{2} + x_{3}')
       \end{gather*}
 
       Bis jetzt gezeigt: $\Svdash\alpha(0)$ und $\Svdash (\forall
-      x_{3}\colon \alpha(x_{3}) \rightarrow \alpha(x_{3}'))$
+      x_{3} ~ \alpha(x_{3}) \rightarrow \alpha(x_{3}'))$
 
       $
       \begin{array}{ll}
-        \Svdash \alpha(0) \rightarrow ((\forall x_{3}\colon
+        \Svdash \alpha(0) \rightarrow ((\forall x_{3} ~
         \alpha(x_{3}) \rightarrow \alpha(x_{3}')) \rightarrow (\forall
-        x_{3}\colon \alpha(x_{3}))) & \text{S9}\\
-        \Svdash (\forall x_{3}\colon
+        x_{3} ~ \alpha(x_{3}))) & \text{S9}\\
+        \Svdash (\forall x_{3} ~
         \alpha(x_{3}) \rightarrow \alpha(x_{3}')) \rightarrow (\forall
-        x_{3}\colon \alpha(x_{3})) & \text{mit MP aus S9 und $\alpha(0)$}\\
-        \Svdash \forall x_{3}\colon \alpha(x_{3})&\text{mit MP aus $(\forall x_3~\alpha(x_)\rightarrow\alpha(x_3'))$} \\
+        x_{3} ~ \alpha(x_{3})) & \text{mit MP aus S9 und $\alpha(0)$}\\
+        \Svdash \forall x_{3} ~ \alpha(x_{3})&\text{mit MP aus $(\forall x_3~\alpha(x_)\rightarrow\alpha(x_3'))$} \\
         \Svdash \alpha(x_{3}) & \text{RA4}
       \end{array}
       $
@@ -4232,7 +4331,7 @@ ein.
 Weitere abkürzende Schreibweisen:
 
 \begin{tabular}{r@{~\ldots~}l}
-  $t<s$ & für $(\exists w\colon w\ne0 \wedge t+w=s)$\\
+  $t<s$ & für $(\exists w ~ w\ne0 \wedge t+w=s)$\\
   $t\leq s$ & für $t<s \vee t=s$\\
   $t>s$ & für $s<t$\\
   $t\geq s$ & für $s\leq t$\\
@@ -4290,7 +4389,7 @@ natürlichen Zahlen. Versuch gescheitert.
   dann, wenn jede endliche Teilmenge von $T$ eine erfüllende Belegung
   besitzt.)
 
-  Wir benötigen die Größer-Relation $x>y\colon (\exists z\in\N\colon
+  Wir benötigen die Größer-Relation $x>y\colon (\exists z\in\N ~
   z\ne0 ~\wedge~ x=y+z)$. Für die unendliche Formelmenge $\mathcal{C}=
   \{c>0, c>1, c>2, c>3, \ldots\}$ gibt es für jede Teilmenge ein Modell
   $\mathcal{M}$ mit der Interpretation $c^{\mathcal{M}} = c+1$.
@@ -4343,12 +4442,12 @@ ist eine Funktion $f\colon\N^k\rightarrow \N$.
   \end{itemize}
 
   Die Kleinerrelation $<$ ist repräsentierbar in $\mathrm{S}$ durch $x_{1} < x_{2}$
-  (steht für   $\exists z\colon z\ne0\wedge x_{1}+z=x_{2}$).
+  (steht für   $(\exists z ~ z\ne0\wedge x_{1}+z=x_{2})$).
 
   Seien $n_{1},n_{2}\in\N$.
   \begin{faelle}
    \item $n_{1}<n_{2}$. Dann gibt es ein $b\in\N$ mit $n_1+b=n_2$.
-    Es ist $\Svdash \exists z\colon z\ne0 \wedge\overline{n_{1}}+z=\overline{n_{2}}$
+    Es ist $\Svdash \exists z ~ z\ne0 \wedge\overline{n_{1}}+z=\overline{n_{2}}$
     zu beweisen
     \begin{align*}
       (1)\quad &\overline{n_{1}} + \overline{b} = \overline{n_{1}}
@@ -4361,7 +4460,7 @@ ist eine Funktion $f\colon\N^k\rightarrow \N$.
          \text{RE4}\\
     \end{align*}
 
-   \item $n_{1}\not< n_{2}$. Es ist $\Svdash \neg(\exists z\colon z\ne 0
+   \item $n_{1}\not< n_{2}$. Es ist $\Svdash \neg(\exists z ~ z\ne 0
     \wedge \overline{n_{1}} + z = \overline{n_{2}})$ zu beweisen.
     \begin{enumerate}
      \item $n_{1}=n_{2}$
@@ -4419,8 +4518,8 @@ ist eine Funktion $f\colon\N^k\rightarrow \N$.
   \begin{gather*}
     x_{1} + x_{2} = x_{3}\\
     \Svdash \overline{a} + \overline{b} = \overline{a+b}\\
-    \Svdash \exists_{1} x_{3}\colon x_{1} +x_{2} = x_{3}\\
-    \exists (x_{3}\colon x_{1}+x_{2} = x_{3}) \wedge (\forall
+    \Svdash \exists_{1} x_{3} ~ x_{1} +x_{2} = x_{3}\\
+    \exists (x_{3} ~ x_{1}+x_{2} = x_{3}) \wedge (\forall
        x_{3}\forall x_{4} (x_{1}+x_{2}=x_{3} \wedge x_{1}+x_{2} = x_{4})
        \rightarrow x_{3}=x_{4})
   \end{gather*}
@@ -4434,14 +4533,14 @@ ist eine Funktion $f\colon\N^k\rightarrow \N$.
     \overline{b}=\overline{c}$
 
    \item 2') zu zeigen: $\Svdash \exists_{1} x_{3} x_{1}+x_{2}=x_{3}$,
-    d.\,h. $\Svdash (\exists x_{3}\colon x_{1}+x_{2}=x_{3}) \wedge
-    (\forall x_{3} \forall x_{4}\colon x_{1}+x_{2}=x_{3}\wedge
+    d.\,h. $\Svdash (\exists x_{3} ~ x_{1}+x_{2}=x_{3}) \wedge
+    (\forall x_{3} \forall x_{4} ~ x_{1}+x_{2}=x_{3}\wedge
     x_{1}+x_{2}=x_{4} \rightarrow x_{3}=x_{4}$
 
     Erster Term:
     \begin{align*}
       (1)\quad & x_{1}+x_{2}= x_{1}+x_{2} &\text{Lemma}\\
-      (2)\quad & \exists x_{3}\colon x_{1}+x_{2}=x_{3} &\text{RE4}
+      (2)\quad & \exists x_{3} ~ x_{1}+x_{2}=x_{3} &\text{RE4}
     \end{align*}
 
     Der zweite Term folgt aus der Symmetrie und der Transitivität der
@@ -4477,7 +4576,7 @@ ist eine Funktion $f\colon\N^k\rightarrow \N$.
     \end{enumerate}
 
    \item zu zeigen ist noch  $\Svdash\exists_{1}
-    x_{2}\colon (x_{1}=0\wedge x_{2}=0) \vee x_{1}=x_{2}'$
+    x_{2} ~ (x_{1}=0\wedge x_{2}=0) \vee x_{1}=x_{2}'$
   \end{enumerate}
 \end{bsp}
 
@@ -4544,7 +4643,7 @@ durch $\alpha, \beta_{1},\ldots,\beta_{m}$. Definiere $f\colon
 \end{gather*}
 Dann ist $f$ repräsentierbar durch
 \begin{gather*}
-  \exists y_{1} \ldots \exists y_{n}\colon
+  \exists y_{1} \ldots \exists y_{n} ~
      \beta_{1}(x_{1},\ldots,x_{k},y_{1}) \wedge \ldots \wedge
      \beta_{n}(x_{1},\ldots,x_{k},y_{n}) \wedge
      \alpha(y_{1},\ldots,y_{n}, y_{k+1})
@@ -5375,7 +5474,7 @@ kodiert als Zahl $z$ mit $v_i=\beta(z,c,i)$.
 Dann gilt (umgangssprachlich ausgedrückt)
 \begin{gather*}
   \beta(z,c,0)=g(k_1,\ldots,k_n) ~ \wedge ~
-     (\forall i\colon ~ i<m \rightarrow \beta(z,c,i+1)=h(i,\beta(z,c,i),k_1,\ldots,k_n))
+     (\forall i  ~ i<m \rightarrow \beta(z,c,i+1)=h(i,\beta(z,c,i),k_1,\ldots,k_n))
 \end{gather*}
 Daraus entwickeln wir nun die Formel, die die
 Funktion $f$ repräsentiert.
@@ -6299,15 +6398,15 @@ Was bedeuten die Formeln und den angegebenene Interpretationen?
   ist die Gleichheit \glqq $=$\grqq\xspace und $f_{1}^{2}$ die Multiplikation
   ($u,v,x,y,z$ sind Variablensymbole)
 
-  $\exists u\in\N\colon x\cdot u=y \wedge \exists v\in\N\colon x\cdot
-  v=z$. Das entspricht der Aussage \glqq $x$ ist gemeinsamer Teiler von $y$
+  $(\exists u\in\N  x\cdot u=y) \wedge (\exists v\in\N  x\cdot
+  v=z)$. Das entspricht der Aussage \glqq $x$ ist gemeinsamer Teiler von $y$
   und $z$\grqq.
 
  \item $\forall y( (\exists z A_{1}^{2}(f_{1}^{2}(y,z),x)) \rightarrow
   (A_{1}^{2}(y,a) \wedge A_{1}^{2}(y,x)))$, Interpretation wie oben und
   $a=1$
 
-  $\forall y\in\N\colon (\exists z\in\N\colon y\cdot z=x \rightarrow)
+  $\forall y\in\N ~ (\exists z\in\N ~ y\cdot z=x \rightarrow)
   \rightarrow (y=1 \vee y=x)$. Das bedeutet \glqq $y$ ist Teiler von $x$
   $\rightarrow$ $(y=1 \vee y=x)$.\grqq\xspace Dies wiederum bedeutet \glqq $x$ ist eine
   Primzahl.\grqq
@@ -6320,7 +6419,7 @@ folgende Bedeutung hat.
  \item $x=ggT(y,z)$
 
   \begin{gather*}
-    T(x, a) \wedge T(x,b) \wedge (\forall y\colon T(y,a) \wedge T(y, b)
+    T(x, a) \wedge T(x,b) \wedge (\forall y ~ T(y,a) \wedge T(y, b)
        \wedge y\leq x)
   \end{gather*}
   mit $T(\alpha,\beta)$ als \glqq$\alpha$ teilt $\beta$\grqq.
@@ -6328,7 +6427,7 @@ folgende Bedeutung hat.
  \item Es gibt unendlich viele Primzahlen.
 
   \begin{gather*}
-    \neg \big( \exists u\colon P(u) \wedge (\forall x\colon P(x) \wedge x
+    \neg \big( \exists u ~ P(u) \wedge (\forall x ~ P(x) \wedge x
        < u) \big)
   \end{gather*}
   mit $P(\alpha)$ als \glqq$\alpha$ ist prim\grqq.
@@ -6400,7 +6499,7 @@ Welche der folgenden Formeln sind gültig?
 \end{enumerate}
 
 \subsection*{Aufgabe 2}
-Finden Sie eine erfüllbare abgeschlossene Formel, die falsch ist unter
+Finden Sie eine erfüllbare geschlossene Formel, die falsch ist unter
 jeder Interpretation mit einer Grundmenge aus einem (zwei, drei)
 Elementen.
 
@@ -6440,7 +6539,7 @@ ersetzt werden.
 Zeigen Sie: ~~$\vdash~ (\forall x_i ~\alpha) \rightarrow (\exists x_i ~\alpha)$.
 
 \begin{align*}
-  (1)\quad & (\forall x\colon \alpha) &\text{A4}\\
+  (1)\quad & (\forall x ~ \alpha) &\text{A4}\\
   (2)\quad & \alpha[x_{i}/t] \rightarrow (\exists x_{i}\alpha)
      &\text{Aufgabe 3}\\
   (3)\quad & (\forall x_{i} \alpha) \rightarrow (\exists x_{i} \alpha)
@@ -6627,7 +6726,7 @@ kann das Deduktionstheorem angewendet werden.
 
 \subsection*{Aufgabe 3}
 Gebundene Umbenennung von Variablen. Bsp.: $\exists c \exists n_{0}^{n}
-\forall n\colon (n\geq n_{0}) \rightarrow (f(n)\subseteq c\cdot g(n_{0}))$
+\forall n ~ (n\geq n_{0}) \rightarrow (f(n)\subseteq c\cdot g(n_{0}))$
 
 Formal: Sei $\alpha$ eine Formel mit freier Variablen $x$ ohne freies
 Vorkommen von $y$ und mit $y$ frei für $x$ in $\alpha$. Dann gilt:
@@ -6657,6 +6756,26 @@ mit der Äquivalenz-Regel.
 
 
 \section{Blatt 9}
+
+\subsection*{Aufgabe 1}
+
+Sei $K$ eine konsistente und abgeschlossene Theorie,
+und $\alpha$ seine eine Formel von $K$, die nicht beweisbar ist.
+Zeigen Sie: dann ist $K+\{\alpha\}$ nicht konsistent.
+
+Wenn $\alpha$ eine geschlossene Formel ist,
+dann sind in $K+\{\alpha\}$ sowohl $\alpha$ als auch $\neg\alpha$ beweisbar.
+Also ist $K+\{\alpha\}$ nicht konsistent.
+
+Wenn $\alpha$ nicht geschlossen ist,
+dann ist der Abschluss $\alpha^{*}$ von $\alpha$ in $K$ nicht beweisbar.
+Deshalb ist $\neg\alpha^{*}$ in $K$ beweisbar,
+und ebenso in $K+\{\alpha\}$.
+In $K+\{\alpha\}$ ist $\alpha^{*}$ beweisbar (mittels Gen).
+Also ist $K+\{\alpha\}$ nicht konsistent.
+
+
+\subsection*{Aufgabe 2}
 
 Sei $\alpha$ eine Formel ohne Quantoren und $\vdash\alpha$ im
 Prädikatenkalkül 1.\,Ordnung. Zeigen Sie: $\alpha$ ist Instanz einer
@@ -6745,10 +6864,10 @@ Wir zeigen $\Svdash x=0+x$ mittels Induktion über $x$
   \end{align*}
   Damit ist $x=0+x \Svdash x'=0+x'$ gezeigt. Mit dem Deduktionstheorem
   folgt $\Svdash x=0+x \rightarrow x'=0+x'$. Mit Generalisierung folgt
-  $\Svdash \forall x\colon x=0+x \rightarrow x'=0+x'$.
+  $\Svdash \forall x ~ x=0+x \rightarrow x'=0+x'$.
 
   Aus dem Induktionsanfang und Induktionsschluss folgt mit Axiom~S9 $\Svdash
-  (\forall x\colon x=0+x)$. Mit der Regel~RA4 ergibt sich $\Svdash t=0+t$.
+  (\forall x ~ x=0+x)$. Mit der Regel~RA4 ergibt sich $\Svdash t=0+t$.
 \end{mdescription}
 
 \section{Blatt 11}
@@ -6780,24 +6899,24 @@ Rerpäsentation ist:
        &\text{Konjunktionsregel}
   \end{align*}
 
- \item $\Svdash \exists_{1} x_{k+1}\colon \overline{n_{1}} \ne
+ \item $\Svdash \exists_{1} x_{k+1} ~ \overline{n_{1}} \ne
   \overline{n_{2}}\wedge \overline{n_{2}}\ne\overline{n_{2}}\wedge \ldots
   \wedge \overline{n_{k}}\ne\overline{n_{k}}\wedge x_{k+1}\ne0$
 
-  einfacher: $\Svdash \exists_{1}x_{k+1}\colon x_{k+1}=0$ d.\,h.
+  einfacher: $\Svdash \exists_{1}x_{k+1} ~ x_{k+1}=0$ d.\,h.
   \begin{gather*}
-    \Svdash (\exists x_{k+1}\colon x_{k+1} =0) \wedge (\forall x_{k+1}
-       \ldots \forall y\colon (x_{k+1} = 0\wedge y=0) \rightarrow x_{+1}
+    \Svdash (\exists x_{k+1} ~ x_{k+1} =0) \wedge (\forall x_{k+1}
+       \ldots \forall y ~ (x_{k+1} = 0\wedge y=0) \rightarrow x_{+1}
        = y)
   \end{gather*}
 
-  $(\exists x_{k+1}\colon x_{k+1} =0)$
+  $(\exists x_{k+1} ~ x_{k+1} =0)$
   \begin{align*}
     (1)\quad & 0=0 & \text{Lemma}\\
-    (2)\quad & \exists x_{1}\colon x_{k+1}=0 &\text{RE 4}
+    (2)\quad & \exists x_{1} ~ x_{k+1}=0 &\text{RE 4}
   \end{align*}
 
-  $(\forall x_{k+1} \ldots \forall y\colon (x_{k+1} = 0\wedge y=0)
+  $(\forall x_{k+1} \ldots \forall y ~ (x_{k+1} = 0\wedge y=0)
   \rightarrow x_{+1} = y)$
   \begin{align*}
     (1)\quad & x_{k+1} = 0\wedge y=0 &\text{Hypothese}\\
@@ -6818,7 +6937,7 @@ mit $C_{i}(n) =i$ (streng) repräsentierbar ist.
  \item Für $C_{m}^{k}(n_{1},\ldots,n_{k})= m$ gilt
   $\Svdash (m_{1}=n_{1}\wedge\ldots \wedge n_{k}=n_{k} \wedge
   \overline{m}=\overline{m})$
- \item $\Svdash(\exists_{1} x_{k+1}\colon
+ \item $\Svdash(\exists_{1} x_{k+1} ~
   \overline{n_{1}}=\overline{n_{1}} \wedge\ldots
   \overline{n_{k}}=\overline{n_{k}} \wedge x_{k+1}=\overline{m}$
 \end{enumerate}
@@ -6836,9 +6955,9 @@ Geben Sie Formeln zur Repräsentation der folgenden Funktionen an.
 \begin{gather*}
   \overline{2}\cdot x_{2} = x_{1} \vee \overline{2}\cdot
      x_{2}+\overline{1} = x_{1}\\[1ex]
-  \big((x_{2} + \overline{1} = x_{1}) \wedge (\exists z\colon x_{1}
+  \big((x_{2} + \overline{1} = x_{1}) \wedge (\exists z ~ x_{1}
      = \overline{2}\cdot z+\overline{1})\big) \vee \big((x_{2} = x_{1} +
-     \overline{1}) \wedge (\exists z\colon x_{1} = \overline{2}\cdot
+     \overline{1}) \wedge (\exists z ~ x_{1} = \overline{2}\cdot
      z)\big)
 \end{gather*}
 
